# testwork

./: .gitignore
little_wafer/: .gitattributes  .gitignore  Extract_array_to_PNG_resize.py  Load_data_from_kaggle.py  Main_P_and_S.py  Model.py  PRR_to_PNG.py  README.md  STD_to_PRR.py  Trainmodel.py  label_encoder.pkl  pyproject.toml  run.py  test_predictions.csv
little_wafer/Data/Output-PRR/ZA530361/: ZA530361_001_S11P_20250814022454_M5116B16P03_WFTB33-01.csv  ZA530361_002_S11P_20250814040500_M5116B16P03_WFTB33-01.csv  ZA530361_003_S11P_20250814052810_M5116B16P03_WFTB33-01.csv  ZA530361_004_S11P_20250814065125_M5116B16P03_WFTB33-01.csv  ZA530361_005_S11P_20250814081511_M5116B16P03_WFTB33-01.csv  ZA530361_006_S11P_20250814093842_M5116B16P03_WFTB33-01.csv  ZA530361_007_S11P_20250814110315_M5116B16P03_WFTB33-01.csv  ZA530361_008_S11P_20250814122727_M5116B16P03_WFTB33-01.csv  ZA530361_009_S11P_20250814135153_M5116B16P03_WFTB33-01.csv  ZA530361_010_S11P_20250814151627_M5116B16P03_WFTB33-01.csv  ZA530361_011_S11P_20250814164201_M5116B16P03_WFTB33-01.csv  ZA530361_012_S11P_20250814180607_M5116B16P03_WFTB33-01.csv  (+12 more)
little_wafer/Output/: test_predictions.csv
little_wafer/Output/checkpoints/: label_encoder.pkl
little_wafer/Output/predictions/: test_metrics.csv
little_wafer/PRR_to_PNG_and_Resize/: Resize_PNG.py
little_wafer/configs/: config.yaml
little_wafer/src/: Main_E_and_S.py  Unlabeled.py  auto_label.py  convert.py  extract.py  kaggledata.py  plot.py  resize.py  semi_supervised.py  train.py
little_wafer/src/utils/: config.py
(+398 files in other folders)
